Fix calendar too small on mobile in test suite

--- a/test/Test.less
+++ b/test/Test.less
@@ -93,7 +93,7 @@ body {
       align-items: stretch;
 
       .react-calendar {
-        width: calc(~"100% - 20px");
+        width: 100%;
         max-width: 400px;
         margin: 0 auto;
 
